src/test/deca/context/valid/Obj/select-methode-param.deca
// Description:
//    Sélection d'une méthode à paramètres
//
// Résultat:
//    Succès
//
class A {
    float methode(float x, boolean bool){
        return x;
    }
}
{
    A a;
    float x = 2.5;
    boolean bool = false;
    a.methode(x, bool);
}